# clean-architecture-python

./: .env  .flake8  Dockerfile  Jenkinsfile  README.md  activate_dumpuser.py  azure-pipeline.yml  createuser.py  createuser_db.py  docker-compose.yml  healthcheck_db.py  initialize_db_data.py  main.py  networking.md  pyproject.toml  requirements.txt  setup.sh  startup.sh
alembic/: env.py
crontabs/: activate-dumpuser-cron
database/: session.py
db-image/alembic/versions/: 8d903d809575_create_dumpuser_table.py  c36e8ea624c7_convert_to_timescale_db.py
db-image/config/: config.py  logging.py
deployment/: scheduler.Dockerfile
docker-files/: webapp-Dockerfile
docs/: inserting-timescale.md
dumpapp/: health-checkdb.py  main.py  startup.sh
dumpapp/database/: __init__.py
dumpapp/internal/api/: deps.py
dumpapp/internal/api/http/: route.py
dumpapp/internal/application/: createuser_db.py  createuser_handle.py
dumpapp/internal/domain/entities/: base.py
dumpapp/internal/infrastructure/persistent/dumpuser/: command_repository.py
internal/api/http/: route.py
internal/api/http/v1/: creatuser_handle.py  dumpuser_handler.py
internal/domain/dtos/: dumpuser.py
internal/domain/entities/: base.py  dumpuser.py
internal/domain/interfaces/dumpuser/: command_repository.py  query_repository.py
internal/infrastructure/persistent/dumpuser/: command_repository.py  curd_repository.py  query_repository.py
scripts/: run.sh  scheduler.sh
tests/integration/: test_health_check.py
workflows/: analysis.yml  build.yml  check.yml  deploy.yml
