[tool.poetry]
name = "python-backend-architecture"
version = "0.1.0"
description = "dxc-demo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
flake8 = "^6.1.0"
loguru = "^0.7.2"
gunicorn = "^21.2.0"
tenacity = "^8.2.3"
pytest = "^7.4.3"
httpx = "^0.25.0"
config = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
